[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photonmover"
version = "0.0.1"
authors = [
  { name="Marc de Cea"},
  { name="Gavin West"},
  { name="Jaehwan Kim"},
]
description = "Control scientific instruments commonly found in optics, photonics and electronics labs."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/mdecea/photonmover"